# VulkanToGo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  compute_image.cpp  input_handler.cpp  textured_mesh.cpp  triangle.cpp
examples/shared/: utility.cpp  utility.h
res/shaders/: gradient.comp  gradient_comp.spv  mesh.vert  mesh_vert.spv  test.comp  test.frag  test.vert  test_comp.spv  test_frag.spv  test_vert.spv  texture.frag  texture_frag.spv  triangle.frag  triangle.vert  triangle_vert.spv
test/: CMakeLists.txt  test_commands.cpp  test_core.cpp  test_descriptors.cpp  test_pipelines.cpp  test_rendering.cpp  test_samplers.cpp  test_storage.cpp  test_submit_context.cpp  test_swapchain.cpp  test_synchronization.cpp  test_timer.cpp  test_transfer.cpp
vulkantogo/: CMakeLists.txt  commands.cpp  commands.h  deletion_stack.h  descriptors.cpp  descriptors.h  pipelines.cpp  pipelines.h  rendering.cpp  rendering.h  samplers.cpp  samplers.h  storage.cpp  storage.h  submit_context.cpp  submit_context.h  swapchain.cpp  swapchain.h  synchronization.cpp  synchronization.h  transfer.cpp  transfer.h  vk_core.cpp  vk_core.h  vulkantogo.h
vulkantogo/util/: deletion_stack.h  frame_handler.cpp  frame_handler.h  input_handler.cpp  input_handler.h  timer.cpp  timer.h
